syntax = "proto3";

package user;
option go_package = "github.com/HLLC-MFU/HLLC-2025/backend/module/user/proto;userpb";

message User {
    string id = 1;
    string username = 2;
    string first_name = 3;
    string middle_name = 4;
    string last_name = 5;
    repeated string roles = 6;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string first_name = 3;
    string middle_name = 4;
    string last_name = 5;
    repeated string role_ids = 6;
}

message GetUserRequest {
    string username = 1;
}

message ValidateCredentialsRequest {
    string username = 1;
    string password = 2;
}

message ValidateCredentialsResponse {
    bool valid = 1;
    User user = 2;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc GetUser(GetUserRequest) returns (User);
    rpc ValidateCredentials(ValidateCredentialsRequest) returns (ValidateCredentialsResponse);
}
